# LogicElements

./: .gitignore  CMakeLists.txt  CONFIG_GUIDE.md  PLATFORM_GUIDE.md  README.md  example_config.json  example_double_click.json  le_AND.cpp  le_AND.hpp  le_Base.cpp  le_Base.hpp  le_Counter.cpp  le_Counter.hpp  le_Element.cpp  le_Element.hpp  le_Engine.cpp  le_Engine.hpp  le_FTrig.cpp  le_FTrig.hpp  le_Math.hpp  le_NOT.cpp  le_NOT.hpp  le_Node.cpp  le_Node.hpp  le_OR.cpp  le_OR.hpp  le_Overcurrent.cpp  le_Overcurrent.hpp  le_RTrig.cpp  le_RTrig.hpp  le_Timer.cpp  le_Timer.hpp
example_configs/: example_config.json  example_config_linux.json  example_config_rpi.json  example_config_windows.json
inc/: UARTTx.hpp  le_AND.hpp  (+23 more)
src/LogicElements/: CMakeLists.txt
src/LogicElements/include/: UARTTx.hpp  comms.hpp  le_AND.hpp  le_AbstractConnectionHandler.hpp  le_AbstractConnectionServer.hpp  le_Analog1PWinding.hpp  le_Analog3PWinding.hpp  le_Board.hpp  le_Complex2Polar.hpp  le_Complex2Rect.hpp  le_Counter.hpp  le_DNP3CommandHandler.hpp  le_DNP3Outstation.hpp  le_DNP3OutstationConfig.hpp  le_DeviceCommandHandler.hpp  le_DeviceSettings.hpp  le_DeviceUtility.hpp  le_Element.hpp  le_Engine.hpp  le_FTrig.hpp  le_IRIGB.hpp  le_Math.hpp  le_Mux.hpp  le_NOT.hpp  le_Node.hpp  le_OR.hpp  le_Overcurrent.hpp  le_PID.hpp  le_PhasorShift.hpp  le_Polar2Complex.hpp  le_Polar2Rect.hpp  le_RTrig.hpp  le_Rect2Complex.hpp  le_Rect2Polar.hpp  le_SER.hpp  le_Timer.hpp  le_Version.hpp.in
src/LogicElements/include/Builder/: le_Builder.hpp
src/LogicElements/include/Communication/: le_AbstractConnectionServer.hpp  le_DNP3CommandHandler.hpp  le_DNP3Outstation.hpp  le_DNP3OutstationConfig.hpp  le_IRIGB.hpp
src/LogicElements/include/Core/: le_Config.hpp.in  le_Element.hpp  le_Engine.hpp  le_Node.hpp  le_Port.hpp  le_Time.hpp  le_Utility.hpp
src/LogicElements/include/Device/: le_Board.hpp  le_DeviceCommandHandler.hpp
src/LogicElements/include/Device/HAL/: le_BoardHAL.hpp  le_BoardHAL_Arduino.hpp  le_BoardHAL_Generic.hpp  le_BoardHAL_RPI.hpp  le_BoardHAL_STM32.hpp
src/LogicElements/include/Elements/Arithmetic/: le_Abs.hpp  le_Add.hpp  le_AddComplex.hpp  le_Divide.hpp  le_DivideComplex.hpp  le_Magnitude.hpp  le_Multiply.hpp  le_MultiplyComplex.hpp  le_Negate.hpp  le_NegateComplex.hpp  le_Subtract.hpp  le_SubtractComplex.hpp
src/LogicElements/include/Elements/Control/: le_Math.hpp  le_Overcurrent.hpp  le_PID.hpp
src/LogicElements/include/Elements/Conversions/: le_Complex2Polar.hpp  le_Complex2Rect.hpp  le_Polar2Complex.hpp  le_Polar2Rect.hpp  le_Rect2Complex.hpp  le_Rect2Polar.hpp
src/LogicElements/include/Elements/Digital/: le_AND.hpp  le_Counter.hpp  le_FTrig.hpp  le_Mux.hpp  le_NOT.hpp  le_OR.hpp  le_RTrig.hpp  le_SER.hpp  le_Timer.hpp
src/LogicElements/include/Elements/Power/: le_Analog1PWinding.hpp  le_Analog3PWinding.hpp  le_PhasorShift.hpp
src/LogicElements/include/le_Builder/: le_Builder.hpp
src/LogicElements/src/: UARTTx.cpp  comms.cpp  le_AND.cpp  le_AbstractConnectionHandler.cpp  le_AbstractConnectionServer.cpp  le_Analog1PWinding.cpp  le_Analog3PWinding.cpp  le_Board.cpp  le_Builder.cpp  le_Complex2Polar.cpp  le_Complex2Rect.cpp  le_Counter.cpp  le_DNP3CommandHandler.cpp  le_DNP3Outstation.cpp  le_DNP3OutstationConfig.cpp  le_DeviceCommandHandler.cpp  le_Element.cpp  le_Engine.cpp  le_FTrig.cpp  le_IRIGB.cpp  le_Math.cpp  le_NOT.cpp  le_OR.cpp  le_Overcurrent.cpp  le_PID.cpp  le_PhasorShift.cpp  le_Polar2Complex.cpp  le_Polar2Rect.cpp  le_Port.cpp  le_RTrig.cpp  le_Rect2Complex.cpp  le_Rect2Polar.cpp  le_SER.cpp  le_Time.cpp  le_Timer.cpp  le_Utility.cpp  le_Version.cpp.in
src/LogicElements/src/Builder/: le_Builder.cpp
src/LogicElements/src/Communication/: UARTTx.cpp  comms.cpp  le_AbstractConnectionHandler.cpp  le_AbstractConnectionServer.cpp  le_DNP3CommandHandler.cpp  le_DNP3Outstation.cpp  le_DNP3OutstationConfig.cpp  le_IRIGB.cpp
src/LogicElements/src/Core/: le_Element.cpp  le_Engine.cpp  le_Port.cpp  le_Time.cpp  le_Utility.cpp  le_Version.cpp.in
src/LogicElements/src/Device/: le_Board.cpp  le_DeviceCommandHandler.cpp
src/LogicElements/src/Device/HAL/: le_BoardHAL_Arduino.cpp  le_BoardHAL_Generic.cpp  le_BoardHAL_RPI.cpp  le_BoardHAL_STM32.cpp
src/LogicElements/src/Elements/Arithmetic/: le_Abs.cpp  le_Add.cpp  le_AddComplex.cpp  le_Divide.cpp  le_DivideComplex.cpp  le_Magnitude.cpp  le_Multiply.cpp  le_MultiplyComplex.cpp  le_Negate.cpp  le_NegateComplex.cpp  le_Subtract.cpp  le_SubtractComplex.cpp
src/LogicElements/src/Elements/Control/: le_Math.cpp  le_Overcurrent.cpp  le_PID.cpp
src/LogicElements/src/Elements/Conversions/: le_Complex2Polar.cpp  le_Complex2Rect.cpp  le_Polar2Complex.cpp  le_Polar2Rect.cpp  le_Rect2Complex.cpp  le_Rect2Polar.cpp
src/LogicElements/src/Elements/Digital/: le_AND.cpp  le_Counter.cpp  le_FTrig.cpp  le_NOT.cpp  le_OR.cpp  le_RTrig.cpp  le_SER.cpp  le_Timer.cpp
src/LogicElements/src/Elements/Power/: le_Analog1PWinding.cpp  le_Analog3PWinding.cpp  le_PhasorShift.cpp
tests/: BUILD_AND_RUN.md  CMakeLists.txt  README.md  filter_test.py  le_Analog1PWinding.py  le_IRIGB.py  le_Update_Times.xlsx  test_element_AND.cpp  test_element_Abs.cpp  test_element_Add.cpp  test_element_AddComplex.cpp  test_element_Analog1PWinding.cpp  test_element_Analog3PWinding.cpp  test_element_Complex2Polar.cpp  test_element_Complex2Rect.cpp  test_element_Counter.cpp  test_element_Divide.cpp  test_element_DivideComplex.cpp  test_element_FTrig.cpp  test_element_Magnitude.cpp  test_element_Math.cpp  test_element_Multiply.cpp  test_element_MultiplyComplex.cpp  test_element_Mux.cpp  test_element_NOT.cpp  test_element_Negate.cpp  test_element_NegateComplex.cpp  test_element_Node.cpp  test_element_OR.cpp  test_element_Overcurrent.cpp  test_element_PID.cpp  test_element_PhasorShift.cpp  test_element_Polar2Complex.cpp  test_element_Polar2Rect.cpp  test_element_RTrig.cpp  test_element_Rect2Complex.cpp  test_element_Rect2Polar.cpp  test_element_SER.cpp  test_element_Subtract.cpp  test_element_SubtractComplex.cpp  (+3 more)
tools/manifest/: CMakeLists.txt  generate_manifest.py
(+26 files in other folders)
